--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
     "knex": "^3.1.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.14.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
